# mmjoin

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.cu
datasets/: simple.txt
include/: defs.hpp  input.hpp  timer.hpp
